Support for PHP5.4x Fixed plugins docs issues with an old function reference interupting the page from displaying. Removed core/file/iframe.php that used to handle file uploading, dropped. Use uploader plugin instead.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,14 @@
 
+CJAX 5.5
+
+April 10, 2013
+
+
+Support for PHP5.4x
+Fixed plugins docs issues with an old function reference interupting the page from displaying.
+
+
+
 CJAX 5.4
 Frebruary 23, 2013
 
