--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,7 +1,7 @@
 
 CJAX 6.0
 
-Apr 10, 2016
+TBD
 
 Namespace, closure and short array syntax used in the framework, PHP version now requires 5.4.0+
 Fixed strict standard errors resulted from calling instance methods statically for PHP 5.5 and 5.6 compatibility
